[package]
authors = ["Anton Romanov <a.romanovich86@gmail.com>"]
description = "Yet another proxy server."
edition = "2021"
exclude = [".gitignore"]
keywords = ["tcp", "proxy", "server"]
license = "MIT"
name = "fjt"
readme = "README.md"
repository = "https://github.com/carmenere/fusionjet"
rust-version = "1.72.0"
version = "0.0.0"

[profile.release]
strip = "symbols"

[profile.dev]
opt-level = 3
debug = 1